--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "concurrently \"npm run start-server\" \"npm run start-client\"",
+    "start": "react-scripts start",
     "start-server": "node server/server.js",
     "start-client": "react-scripts start",
     "build": "react-scripts build",
